lib/src/compiler/tests/testdata/errors/116.out
error[E031]: unexpected escape sequence
 --> line:1:8
  |
1 | import "foo\x00"
  |        ^^^^^^^^^ escape sequences are not allowed in this string
  |